--- a/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/IndexExpenseMaster.cshtml
@@ -37,7 +37,7 @@
 <table class="barattach-blue">
     <tr>
         <td>
-            <label class="topicmargin-size67">Master Expense</label>
+            <label class="topicmargin-size58">Master Expense</label>
             <a href="/ExpenseMaster/CreateExpenseMaster"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" id="imgExpenseCreate" /></a>
             <div class="topicText">Search : <input id="searchInput" placeholder="Type To Filter" class="textleft"><br /></div>
         </td>
@@ -52,7 +52,7 @@
             <th class="thblue Rowpointer">Group</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
             <th class="thblue Rowpointer">ราคา</th>
-            <th class="thblue Rowpointer txtcenter">ลำดับ</th>
+            <th class="thblue Rowpointer txtcenter hideANDseek">ลำดับ</th>
             <th class="thblue"></th>
         </tr>
     </thead>
