--- a/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
+++ b/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
@@ -261,7 +261,10 @@ $(document).ready(function () {
         font-family: serif;
     }
 </style>
-<h2 class="bigtopic">Job Order</h2><h2>Man Power</h2>
+@*<h2 class="bigtopic">Job Order</h2>
+<h2 class="bigtopic">Man Power</h2>*@
+<h2 class="topic1">Job Order</h2>
+<h2 class="topic2">Man Power</h2>
 <div id="calendar"></div>
 <div id="calendarManPower"></div>
 <section class="features">
