--- a/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/IncomeMaster/IndexIncomeMaster.cshtml
@@ -53,7 +53,7 @@
             <th class="thblue hidecolumn Rowpointer ">ID</th>
             <th class="thblue Rowpointer">รายละเอียด</th>
             <th class="thblue Rowpointer">ราคา</th>
-            <th class="thblue Rowpointer txtcenter">ลำดับ</th>
+            <th class="thblue Rowpointer txtcenter hideANDseek">ลำดับ</th>
             <th class="thblue"></th>
         </tr>
     </thead>
