--- a/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/IndexProducts.cshtml
@@ -51,7 +51,7 @@
                 <th class="thgray Rowpointer">Serial</th>
                 <th class="thgray hideANDseek Rowpointer">หมายเลขเครื่อง</th>
                 @*<th class="hideANDseek Rowpointer">ประเภทสินค้า</th>*@
-                <th class="thgray hideANDseek Rowpointer">รายละเอียด</th>
+                <th class="thgray hideANDseek Rowpointer">รายการเครื่องมือ</th>
                 <th class="thgray hideANDseek Rowpointer">ยี่ห้อ</th>
                 <th class="thgray hideANDseek Rowpointer">รุ่น</th>
                 <th class="thgray Rowpointer">ขนาด</th>
