--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -682,7 +682,7 @@
                                                 <tr>
                                                     <th rowspan="2">ลำดับ</th>
                                                     <th rowspan="2">Serial</th>
-                                                    <th rowspan="2">รายละเอียด</th>
+                                                    <th rowspan="2">รายการเครื่องมือ</th>
                                                     <th rowspan="2" class="hideANDseek">ยี่ห้อ</th>
                                                     <th rowspan="2" class="hideANDseek">รุ่น</th>
                                                     <th rowspan="2">ขนาด</th>
@@ -1056,7 +1056,7 @@
                                 <th rowspan="2"></th>
                                 <th rowspan="2">No.</th>
                                 <th rowspan="2">Serial</th>
-                                <th rowspan="2">รายละเอียด</th>
+                                <th rowspan="2">รายการเครื่องมือ</th>
                                 <th rowspan="2">ขนาด</th>
                                 <th rowspan="2">หน่วยนับ</th>
                                 <th rowspan="2">รุ่น</th>
@@ -1254,7 +1254,7 @@
                             <tr>
                                 <th rowspan="2"></th>
                                 <th rowspan="2">No.</th>
-                                <th rowspan="2">รายละเอียด</th>
+                                <th rowspan="2">รายการเครื่องมือ</th>
                                 <th rowspan="2">หน่วยนับ</th>
                                 <th rowspan="2" class="text-size50">จำนวนที่เบิก</th>
                                 <th colspan="4" class="mnReturn">คืน</th>
