--- a/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/CreateUser.cshtml
@@ -37,6 +37,12 @@
                     <button type="button" id="btnCheck" class="btn btn-primary float-none marginleft btnwidth" onclick="CheckAD()">Get ADUser</button>
                 </li>
                 <li>
+                    <label class="label-2 floatnone" style="margin-right: 10%;">Password<span class="required">*</span></label>
+                </li>
+                <li>
+                    <input type="password" id="txtPassword" name="field1" class="field-divided width-190 pwd" />
+                </li>
+                <li>
                     <label class="label-2" style="margin-right: 10%;">Position</label>&nbsp;<label class="label-2" style="margin-right: 10%;"></label>
                 </li>
                 <li>
