--- a/Alpha/AlphaMvc/Views/User/EditUser.cshtml
+++ b/Alpha/AlphaMvc/Views/User/EditUser.cshtml
@@ -36,6 +36,12 @@
                     <input type="text" id="txtUserName" name="field_1" class="field-divided width-190" disabled autofocus/>&nbsp;<input type="text" id="txtTitle" name="field1" class="field-divided width-45per" disabled />
                 </li>
                 <li>
+                    <label class="label-2 floatnone" style="margin-right: 10%;">Password<span class="required">*</span></label>
+                </li>
+                <li>
+                    <input type="password" id="txtPassword" name="field1" class="field-divided width-180 pwd" />
+                </li>
+                <li>
                     <label class="label-2 marginright-43">ชื่อ</label>&nbsp;<label class="label-2" style="margin-right: 5%;">นามสกุล</label>
                 </li>
                 <li>
