--- a/Alpha/AlphaMvc/Content/Site.css
+++ b/Alpha/AlphaMvc/Content/Site.css
@@ -654,7 +654,7 @@ ul#social li {
     .content-wrapper {
         padding-right: 10px;
         padding-left: 10px;
-        padding-top: 5px;
+        /*padding-top: 5px;*/
     }
 
     .featured .content-wrapper {
