--- a/Alpha/AlphaMvc/Content/Style.css
+++ b/Alpha/AlphaMvc/Content/Style.css
@@ -19,15 +19,26 @@
     margin-left: 10px;
     z-index: 1;
 }
-.bigtopic
+.topic1
 {
-    width: 200px;
+    /*width: 200px;*/
     float: left;
-    margin-right: 38%;
+    margin-right: 44%;
+}
+.topic2
+{
+    /*width: 200px;*/
+    float: left;
+    margin-right: 20%;
 }
 .width-190{
     margin-right: 5px !important;
     width: 45% !important;
+    /*width: 190px !important;*/
+}
+.width-180{
+    margin-right: 5px !important;
+    width: 40% !important;
     /*width: 190px !important;*/
 }
 .width-45per{
@@ -1202,16 +1213,55 @@ select{
     }
 }
 
-  @media screen and (max-width:367px) {
-
+  @media screen and (max-width:370px) {
+      .topicmargin-size58{
+        margin-top: 10px;
+        margin-left: 10px;
+        color: white;
+        margin-right: 58% !important;
+    }
+      .topicmargin-size67{
+        margin-top: 10px;
+        margin-left: 10px;
+        color: white;
+        margin-right: 60% !important;
+    }
+    .topic1
+    {
+        /*width: 200px;
+        float: left;
+        margin-right: 44%;*/
+        display:none;
+    }
+    .topic2
+    {
+        /*width: 200px;
+        float: left;
+        margin-right: 20%;*/
+        display:none;
+    }
      .imglogon {
         float: left;
         position: absolute;
         /*top: 2%;*/
         left: 65% !important;
     }
+     .logonUser{
+    /*background-color: #f44336;*/
+    color: #fbfbfb;
+    padding: 5px 23px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    margin-left: 29%;
+    margin-top: 32%;
+    /*margin-top: 1.5%;*/
+    position: absolute;
+    font-size: 12px;
+}
      .logonname{
-    background-color: #f44336;
+    /*background-color: #f44336;*/
+    background-color: transparent;
     color: white;
     padding: 5px 23px;
     text-align: center;
@@ -1894,6 +1944,12 @@ ul.topnav, li.dropdown {
     margin-left: 10px;
     color: white;
     margin-right: 47%;
+}
+.topicmargin-size58{
+    margin-top: 10px;
+    margin-left: 10px;
+    color: white;
+    margin-right: 58%;
 }
 .topicmargin-size5 {
     margin-top: 10px;
