--- a/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
+++ b/Alpha/AlphaMvc/Views/ExpenseMaster/EditExpenseMaster.cshtml
@@ -6,14 +6,62 @@
 @*<h2>Master Expense Edit</h2>*@
 <script src="@Url.Content("~/Scripts/CUDS/ExpenseMaster/EditExpenseMaster.js")" type="text/javascript"></script>
 <div class="modal fade" id="ShowDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+<style>
+    /*table {
+        background: #fbfbf1;
+        width: 335px;
+    }
 
+    .btn-xs {
+        padding: 1px 1px;
+        width: 20px;
+    }*/
+
+    .spndiv {
+        height: 50px;
+    }
+
+    .short-div {
+        height: 20%;
+    }
+</style>
     @using (Html.BeginForm())
     {
         <form>
+            @*<div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-4">
+                        <div class="short-div">
+                            <div class="form-group">
+                                <label for="cmbExpenseGroup">Expense Group:</label>
+                                <select id="cmbExpenseGroup" class="form-control text-floatleft text-size180" required autofocus></select>
+                            </div>
+                        </div>
+                        <div class="short-div">
+                            <div class="form-group">
+                                <label for="txtDetail">Detail:</label>
+                                <input type="text" id="txtDetail" class="form-control text-size180" placeholder="" />
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-2 col-sm-3 col-xs-12">
+                        <div class="short-div">
+                            <div class="form-group">
+                                <label for="txtDetail">Detail:</label>
+                                <input type="text" id="txtDetail" class="form-control text-size180" placeholder="" />
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+            </div>*@
             <ul class="form-style">
                 <li>
-                    <label class="label-small-22">Expense Group</label>&nbsp;<label class="label-2">Detail<span class="required">*</span></label>
-                    <select id="cmbExpenseGroup" class="field-divided text-floatleft text-size180" required autofocus></select>&nbsp;<input type="text" id="txtDetail" class="field-divided text-size180" placeholder="" />
+                    <label class="label-small-22 floatnone">Expense Group</label>
+                    <select id="cmbExpenseGroup" class="field-divided text-size180" required autofocus></select>
+                </li>
+                <li>
+                    <label class="label-2 floatnone">Detail<span class="required">*</span></label>
+                    <input type="text" id="txtDetail" class="field-divided text-size200" placeholder="" />
                 </li>
                 <li>
                     <label>Price List<span class="required">*</span></label>
